# pharmasignal-ai

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts
frontend/src/components/: CaseDetail.tsx  CaseQueue.tsx
infrastructure/k8s/ingestion/: deployment.yaml
infrastructure/k8s/orchestrator/: deployment.yaml
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
services/ingestion/: Dockerfile  main.py  pyproject.toml
services/ingestion/app/api/: routes.py
services/ingestion/app/models/: database.py  report.py
services/ingestion/app/services/: fda_client.py
services/ingestion/data/incoming/: crm_export_20260522.csv
services/notifications/: main.py  pyproject.toml
services/orchestrator/: Dockerfile  main.py  pyproject.toml
services/orchestrator/app/agents/: escalation_agent.py  medical_agent.py  narrative_agent.py  signal_agent.py  triage_agent.py
services/orchestrator/app/api/: routes.py
services/orchestrator/app/models/: state.py
services/orchestrator/app/services/: workflow.py
services/rag/: Dockerfile  main.py  pyproject.toml
services/rag/app/api/: routes.py
services/rag/app/services/: document_loader.py  embedder.py  vector_store.py
services/rag/data/chroma/: chroma.sqlite3
services/rag/data/documents/: adverse_event_definitions.txt  gdpr_clinical_data.txt  pharmacovigilance_guidelines.txt  signal_detection_methodology.txt
services/review-api/: Dockerfile  main.py  pyproject.toml
(+9 files in other folders)
